# rust-ffmpeg4

./: Cargo.toml
examples/: chapters.rs  codec-info.rs  metadata.rs  transcode-audio.rs
src/: lib.rs
src/codec/: id.rs
src/codec/encoder/: audio.rs
src/codec/packet/: side_data.rs
src/util/color/: primaries.rs  space.rs
src/util/format/: pixel.rs
src/util/frame/: side_data.rs
