[package]
name    = "ffmpeg4"
version = "0.4.0"
build   = "build.rs"

authors = [
    "meh. <meh@schizofreni.co>",
    "Vasily Chekalkin <bacek@bacek.com>",
]
license = "WTFPL"

description = "Safe FFmpeg wrapper"
repository  = "https://github.com/bacek/rust-ffmpeg4"
keywords    = ["audio", "video"]

[features]
default = ["codec", "device", "filter", "format", "resampling", "software-scaling"]

static = ["ffmpeg4-sys/static"]
build  = ["static", "ffmpeg4-sys/build"]

# licensing
build-license-gpl      = ["ffmpeg4-sys/build-license-gpl"]
build-license-nonfree  = ["ffmpeg4-sys/build-license-nonfree"]
build-license-version3 = ["ffmpeg4-sys/build-license-version3"]

# misc
build-pic  = ["ffmpeg4-sys/build-pic"]
build-zlib = ["ffmpeg4-sys/build-zlib"]

# ssl
build-lib-gnutls  = ["ffmpeg4-sys/build-lib-gnutls"]
build-lib-openssl = ["ffmpeg4-sys/build-lib-openssl"]

# filters
build-lib-fontconfig = ["ffmpeg4-sys/build-lib-fontconfig"]
build-lib-frei0r     = ["ffmpeg4-sys/build-lib-frei0r"]
build-lib-ladspa     = ["ffmpeg4-sys/build-lib-ladspa"]
build-lib-ass        = ["ffmpeg4-sys/build-lib-ass"]
build-lib-freetype   = ["ffmpeg4-sys/build-lib-freetype"]
build-lib-freebidi   = ["ffmpeg4-sys/build-lib-freebidi"]
build-lib-opencv     = ["ffmpeg4-sys/build-lib-opencv"]

# encoders/decoders
build-lib-aacplus          = ["ffmpeg4-sys/build-lib-aacplus"]
build-lib-celt             = ["ffmpeg4-sys/build-lib-celt"]
build-lib-dcadec           = ["ffmpeg4-sys/build-lib-dcadec"]
build-lib-faac             = ["ffmpeg4-sys/build-lib-faac"]
build-lib-fdk-aac          = ["ffmpeg4-sys/build-lib-fdk-aac"]
build-lib-gsm              = ["ffmpeg4-sys/build-lib-gsm"]
build-lib-ilbc             = ["ffmpeg4-sys/build-lib-ilbc"]
build-lib-kvazaar          = ["ffmpeg4-sys/build-lib-kvazaar"]
build-lib-mp3lame          = ["ffmpeg4-sys/build-lib-mp3lame"]
build-lib-opencore-amrnb   = ["ffmpeg4-sys/build-lib-opencore-amrnb"]
build-lib-opencore-amrwb   = ["ffmpeg4-sys/build-lib-opencore-amrwb"]
build-lib-openh264         = ["ffmpeg4-sys/build-lib-openh264"]
build-lib-openjpeg         = ["ffmpeg4-sys/build-lib-openjpeg"]
build-lib-opus             = ["ffmpeg4-sys/build-lib-opus"]
build-lib-schroedinger     = ["ffmpeg4-sys/build-lib-schroedinger"]
build-lib-shine            = ["ffmpeg4-sys/build-lib-shine"]
build-lib-snappy           = ["ffmpeg4-sys/build-lib-snappy"]
build-lib-speex            = ["ffmpeg4-sys/build-lib-speex"]
build-lib-stagefright-h264 = ["ffmpeg4-sys/build-lib-stagefright-h264"]
build-lib-theora           = ["ffmpeg4-sys/build-lib-theora"]
build-lib-twolame          = ["ffmpeg4-sys/build-lib-twolame"]
build-lib-utvideo          = ["ffmpeg4-sys/build-lib-utvideo"]
build-lib-vo-aacenc        = ["ffmpeg4-sys/build-lib-vo-aacenc"]
build-lib-vo-amrwbenc      = ["ffmpeg4-sys/build-lib-vo-amrwbenc"]
build-lib-vorbis           = ["ffmpeg4-sys/build-lib-vorbis"]
build-lib-vpx              = ["ffmpeg4-sys/build-lib-vpx"]
build-lib-wavpack          = ["ffmpeg4-sys/build-lib-wavpack"]
build-lib-webp             = ["ffmpeg4-sys/build-lib-webp"]
build-lib-x264             = ["ffmpeg4-sys/build-lib-x264"]
build-lib-x265             = ["ffmpeg4-sys/build-lib-x265"]
build-lib-avs              = ["ffmpeg4-sys/build-lib-avs"]
build-lib-xvid             = ["ffmpeg4-sys/build-lib-xvid"]

# protocols
build-lib-smbclient = ["ffmpeg4-sys/build-lib-smbclient"]
build-lib-ssh       = ["ffmpeg4-sys/build-lib-ssh"]

# components
codec               = ["ffmpeg4-sys/avcodec"]
device              = ["ffmpeg4-sys/avdevice", "format"]
filter              = ["ffmpeg4-sys/avfilter"]
format              = ["ffmpeg4-sys/avformat", "codec"]
resampling          = ["ffmpeg4-sys/swresample"]
postprocessing      = ["ffmpeg4-sys/postproc"]
software-scaling    = ["ffmpeg4-sys/swscale", "codec"]

[dependencies]
libc     = "0.2"
bitflags = "1.0"

[dependencies.image]
version  = "0.22"
optional = true

[dependencies.ffmpeg4-sys]
version = "4.2"
default-features = false
# Temporary change it
git = "https://github.com/bacek/rust-ffmpeg4-sys"
